<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vika</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="button">Button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="hide">Hide Action Bar</string>
    <string name="show">Show Action Bar</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="empty">Not date</string>
    <string name="title_activity_my_activity3">MyActivity3</string>
    <string name="textView">TextView</string>
    <string name="cats">RSS Reader</string>
    <string-array name="views_array">
        <item>RSS Reader</item>
        <item>Animation</item>
        <item>Hide ActionBar</item>
    </string-array>
    <string name="menu">Menu</string>
    <string-array name="cats_array">
        <item>Немецкий рекс</item>
        <item>Гавана</item>
        <item>Австралийская дымчатая кошка</item>
        <item>Американская жесткошерстная кошка</item>
    </string-array>
    <string name="rex">ПРОИСХОЖДЕНИЕ\n
                       Эти красавцы появились в\n
                       Восточной Пруссии, но если\n
                       вы склонны искать всюду\n
                       русский след – нет проблем.\n
                       Родоначальница – русская голубая, а папа – перс.\n\n
                       Тело\n
                       Средней величины и длины.\n
                       Крепкое и мускулистое.\n\n
                       Голова\n
                       Округлая, широкая между ушами, с крепким.\n
                       Нос с легкой впадинкой у основания.\n\n
                       Конечности\n
                       Тонкие, средней длины.\n
                       Слегка овальные.\n\n
                       Уши\n
                       Большие, широкие у основания.\n
                       Кончики слегка закруглены\n\n
                       Шерсть\n
                       Мягкая на ощупь и похожа на бархат.\n
                       Короткая.\n
                       Плюшевая и имеет заметный завиток.\n\n
                       Окрасы\n
                       Все окрасы. \n
                       Допускается любое количество белого.\n\n
                       Недостатки\n
                       Волнистая или лохматая шерсть.\n
                       Лысые места.\n
                       Слишком короткий или лысый хвост.\n\n
                       Хвост\n
                       Средней длины.\n
                       Хорошо опушен.\n\n
                       Глаза\n
                       На хорошем расстоянии от линии носа.\n
                       Ближе к внешним линиям головы.\n
                       Глаза средней величины.\n
                       Чистого цвета.</string>
    <string name="havana">Первая в мире разновидность\n
                         ориентальной кошки была зарегистрирована\n
                         в 1959 году – это Гавана.\n\n
                         Тело\n
                         Средней длины.
                         Лапы овальные, компактные.\n
                         Голова\n
                         Длинная, небольшая.\n
                         Мордочка узкая.\n \n
                         Конечности\n
                         Ноги длинные, лапы овальные.\n\n
                         Уши\n
                         Большие, широко и прямо поставленные.\n\n
                         Мочка носа\n
                         Кончик носа и подушечки лап розовые.\n\n
                         Шерсть\n
                         Короткая, прилегает к телу.\n\n
                         Окрасы\n
                         Яркий однотонный коричневый.\n\n
                         Глаза\n
                         Миндалевидные, цвет зелёный.");</string>
    <string name="avs">Австралийская мист –\n
                       это относительно новая порода,\n
                       созданная в Сиднее в 1975-1976 годах.\n
                       К прародителям данной породы можно\n
                       отнести абиссинскую и бурмезскую,\n
                       а также домашних непородистых кошек.\n\n
                       Тело\n
                       Средней величины и средней длины.\n
                       Оно твёрдое и мускулистое.\n\n
                       Голова\n
                       Имеет форму широкого, тупого клина.\n
                       Контуры слегка округленные.\n
                       В профиле нос слегка выделяется.\n\n
                       Уши\n
                       От среднего до крупного размера.\n
                       Широкие у основания с округлыми кончиками.\n\n
                       Шерсть\n
                       Короткая, блестящая и эластичная.\n
                       С подшерстком.\n\n
                       Корпус\n
                       Широкая и округлая,если смотреть в профиль.\n
                       Ноги средней длины и мускулистые.\n
                       Лапы овальные.\n\n
                       Глаза\n
                       Большие, блестящие.\n
                       Широко посаженные и косо направленные к носу."</string>
    <string name="american">Впервые эта порода появилась\n
                            где-то в 60-х годах прошлого\n
                            века, и с тех пор покорила не\n
                            только США и Канаду, но и\n
                            добралась до Европы.\n\n
                            Голова\n
                            Округлая.\n
                            Переход от лба к морде плавный.\n\n
                            Конечности\n
                            По длине средние.\n
                            С округлыми и плотными лапами.\n\n
                            Уши\n
                            По размеру средние.\n
                            Поставлены широко.\n
                            На концах округлые.\n\n
                            Окрасы\n
                            Одноцветные.
                            Шиншилла, камея различных типов,  серебристые.\n\n
                            Корпус\n
                            По размеру колеблется от среднего до крупного.\n
                            Широкий, спина прямая, мускулатура хорошо развита.\n\n
                            Хвост\n
                            Толстый у основания.
                            Сужается к концу, по длине средний.\n\n
                            Глаза\n
                            По размеру большие.\n
                            Посажены широко.\n
                            Цвет может быть любым.</string>
    <string name="cat">Select cat from list</string>
</resources>
